ready for deployement

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-tensorflow==2.12.0
-pandas 
-dvc
-mlflow==2.2.2
-notebook
-numpy
-matplotlib
-seaborn
+tensorflow==2.16.1
+pandas==1.5.3
+numpy==1.24.3
+matplotlib==3.7.1
+seaborn==0.12.2
 python-box==6.0.2
-pyYAML
-tqdm
+PyYAML==6.0
+tqdm==4.65.0
 ensure==1.0.2
-joblib
-types-PyYAML
-scipy
-Flask
-Flask-Cors
-gdown
--e .
+joblib==1.2.0
+scipy==1.10.1
+Flask==2.3.2
+Flask-Cors==4.0.0
+gunicorn==20.1.0
